Removed the hbl account details and resolved the domain alignment in home and also added the year feature in stats

--- a/src/Components/domains/domains.css
+++ b/src/Components/domains/domains.css
@@ -42,7 +42,8 @@
   padding: 20px 20px;
   gap: 30px;
   scroll-snap-type: x mandatory;
-  scroll-padding: 50px;
+  scroll-padding: 20px;
+  justify-content: center;
 }
 
 .scroll-container .custom-card {
@@ -102,5 +103,9 @@
 
   .custom-card strong{
      font-size: 2rem;
+  }
+
+  .scroll-container {
+    justify-content: flex-start; 
   }
 }
